site contents update

--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -25,7 +25,7 @@
 
 - authors: Shahgedanova M, Adler C, Gebrekirstos A, Grau HR, Huggel C, Marchant R, Pepin N, Vanacker V, Viviroli D, Vuille M
   year: 2021
-  title: "Mountain Observatories: Status and Prospects for Enhancing and Connecting a Global Community"
+  title: "Mountain observatories: status and prospects for enhancing and connecting a global community"
   journal: Mountain Research and Development
   volume: 41(2)
   pages: A1-A15
