--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -23,12 +23,24 @@
     external: Y
   new: Y
 
+- authors: Muñoz R, Huggel C, Drenkhan F, Vis M, Viviroli D
+  year: 2021
+  title: Comparing model complexity for glacio-hydrological simulation in the data-scarce Peruvian Andes
+  journal: "Journal of Hydrology: Regional Studies"
+  volume: accepted
+  # pages: XXXX–XXXX
+  # doi: 10.1016/j.ejrh.2021
+  # pdf: XXXXXXXXXXXXXXXXX
+  # pdf_external: Y
+  # openaccess: Y
+  new: Y
+
 - authors: Shahgedanova M, Adler C, Gebrekirstos A, Grau HR, Huggel C, Marchant R, Pepin N, Vanacker V, Viviroli D, Vuille M
   year: 2021
   title: "Mountain observatories: status and prospects for enhancing and connecting a global community"
   journal: Mountain Research and Development
   volume: 41(2)
-  pages: A1-A15
+  pages: A1–A15
   doi: 10.1659/MRD-JOURNAL-D-20-00054.1
   pdf: https://bioone.org/journalArticle/Download?fullDOI=10.1659%2FMRD-JOURNAL-D-20-00054.1
   pdf_text: Download pdf
