--- a/_data/publications_papers-further.yml
+++ b/_data/publications_papers-further.yml
@@ -1,3 +1,12 @@
+- authors: Müller D, Bänziger R, Barben M, Kipfer A, Koksch M, Kolb R, Meng A, Salvetti A,Schaefli B, Scherer S, Viviroli D
+  year: 2022
+  title: "Hydrologische Grundlagen und Qualitätssicherung. Eine Auslegeordnung und Empfehlungen"
+  journal: wasser energie luft
+  volume: 114
+  issue: 1
+  pages: 29–31
+  new: Y
+
 - authors: Viviroli D
   year: 2019
   title: "Der Inn als internationaler Lebensspender"
