--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -61,7 +61,7 @@
   pdf_external: Y
   links:
   - url: https://dx.doi.org/10.5061/dryad.ns1rn8pnt
-    text: Free access to resulting data
+    text: Open access to resulting data
     external: Y
   notes:
   - text: "Featured as research highlight in *Nature*"
@@ -78,7 +78,6 @@
   - title: press release (Aalto University, Finnish)
     url: https://www.aalto.fi/fi/uutiset/riippuvuus-vuoristojen-vesivarannoista-kasvaa-vuoristot-toimivat-vesitorneina-jopa
     external: Y
-  new: Y
 
 - authors: Immerzeel WW, Lutz AF, Andrade M, Bahl A, Biemans H, Bolch T, Hyde S, Brumby S, Davies BJ, Elmore AC, Emmer A, Feng M, Fernández A, Haritashya U, Kargel, JS, Koppes M, Kraaijenbrink PDA, Kulkarni AV, Mayewski P, Nepal S, Pacheco P, Painter TH, Pellicciotti F, Rajaram H, Rupper S, Sinisalo A, Shrestha AB, Viviroli D, Wada Y, Xiao C, Yao T, Baillie JEM
   year: 2020
