--- a/_data/publications_papers-further.yml
+++ b/_data/publications_papers-further.yml
@@ -1,4 +1,4 @@
-- authors: Müller D, Bänziger R, Barben M, Kipfer A, Koksch M, Kolb R, Meng A, Salvetti A,Schaefli B, Scherer S, Viviroli D
+- authors: Müller D, Bänziger R, Barben M, Kipfer A, Koksch M, Kolb R, Meng A, Salvetti A, Schaefli B, Scherer S, Viviroli D
   year: 2022
   title: "Hydrologische Grundlagen und Qualitätssicherung. Eine Auslegeordnung und Empfehlungen"
   journal: wasser energie luft
@@ -6,6 +6,7 @@
   issue: 1
   pages: 29–31
   new: Y
+  pdf: /documents/KOHS_2022_wel_114.pdf
 
 - authors: Viviroli D
   year: 2019
