--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -18,6 +18,9 @@
   - title: The Guardian
     url: https://www.theguardian.com/environment/2021/may/14/third-of-global-food-production-at-risk-from-climate-crisis
     external: Y
+  - title: Helsingin Sanomat
+    url: https://www.hs.fi/tiede/art-2000008622257.html?share=3eff822320b10de11ffce8c38ef403ee
+    external: Y
   - title: MTV Uutiset
     url: https://www.mtvuutiset.fi/artikkeli/ilmastonmuutos-uhkaa-kolmasosaa-maailman-ruoantuotannosta-suomi-saattaa-menettaa-havumetsat/8142182?mtv_ref=twb_uutiset_uusimmat#gs.0tc156
     external: Y
