--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -37,6 +37,9 @@
   - title: Press release (FOEN)
     url: https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/mitteilungen.msg-id-82397.html
     external: Y
+  - title: news item at Department of Geography, University of Zurich
+    url: https://www.geo.uzh.ch/de/events/news-archive/extremhochwasser-aare.html
+    external: Y
   - title: Aargauer Zeitung
     url: https://www.aargauerzeitung.ch/leben/atomkraft-studie-zeigt-extreme-hochwasser-koennten-kernkraftwerke-fluten-wuerden-aber-die-sicherheit-nicht-gefaehrden-ld.2105137
     external: Y
@@ -63,6 +66,9 @@
     external: Y
   - title: Schweizer Radio und Fernsehen (Rendez-vous)
     url: https://www.srf.ch/news/schweiz/extremhochwasser-und-akw-koennte-es-auch-in-der-schweiz-ein-fukushima-geben
+    external: Y
+  - title: Schweizer Radio und Fernsehen (Tagesschau)
+    url: https://www.srf.ch/play/tv/-/video/-?urn=urn:srf:video:64eb6d07-f72a-40f9-b0a7-ee8974939edb
     external: Y
   - title: St. Galler Tagblatt
     url: https://www.tagblatt.ch/leben/atomkraft-studie-zeigt-extreme-hochwasser-koennten-kernkraftwerke-fluten-wuerden-aber-die-sicherheit-nicht-gefaehrden-ld.2105137
