--- a/_data/publications_papers-preprints.yml
+++ b/_data/publications_papers-preprints.yml
@@ -2,7 +2,7 @@
   year: 2022
   title: Comprehensive space-time hydrometeorological simulations for estimating very rare floods at multiple sites in a large river basin
   archive: Natural Hazards and Earth System Sciences Discussions
-  date: 22.03.2022
+  date: accepted
   doi: 10.5194/nhess-2022-99
   pdf: https://nhess.copernicus.org/preprints/nhess-2022-99/nhess-2022-99.pdf
   pdf_external: Y
