--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -2,11 +2,12 @@
   year: 2022
   title: "Human populations in the world’s mountains: spatio-temporal patterns and potential controls"
   journal: PLOS ONE
-  volume: accepted
-  # pages: xxxxxxxxxxxxxxxxxxxxxxxxxxx
-  # doi: xxxxxxxxxxxxxxxxxxxxxxx
-  # pdf: xxxxxxxxxxxxxxxxxxxxxxxxxx
-  # pdf_external: Y
+  volume: 17
+  issue: 7
+  pages: e0271466
+  doi: 10.1371/journal.pone.0271466
+  pdf: https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0271466&type=printable
+  pdf_external: Y
   openaccess: Y
   new: Y
 
