--- a/_data/publications_papers-preprints.yml
+++ b/_data/publications_papers-preprints.yml
@@ -1,7 +1,7 @@
 - authors: Viviroli D, Sikorska-Senoner AE, Evin G, Staudinger M, Kauzlaric M, Chardon J, Favre AC, Hingray B, Nicolet G, Raynaud D, Seibert J, Weingartner R, Whealton C
   year: 2022
   title: Comprehensive space-time hydrometeorological simulations for estimating very rare floods at multiple sites in a large river basin
-  archive: Natural Hazards and Earth System Sciences Discussions
+  archive: Natural Hazards and Earth System Sciences
   date: accepted
   doi: 10.5194/nhess-2022-99
   pdf: https://nhess.copernicus.org/preprints/nhess-2022-99/nhess-2022-99.pdf
