--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -109,7 +109,7 @@
 
 - authors: Westerberg IK, Sikorska-Senoner AE, Viviroli D, Vis J, Seibert J
   year: 2020
-  title: Hydrologic model calibration with uncertain discharge data
+  title: Hydrological model calibration with uncertain discharge data
   journal: Hydrological Sciences Journal
   special_issue: "Special Issue: Hydrological Data: Opportunities And Barriers"
   doi: 10.1080/02626667.2020.1735638
