--- a/_data/publications_book-chapters.yml
+++ b/_data/publications_book-chapters.yml
@@ -8,7 +8,7 @@
   booktitle: "Climate Change 2022: Impacts, Adaptation and Vulnerability. Working Group II contribution to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change"
   publisher: Intergovernmental Panel on Climate Change (IPCC)
   place: Geneva
-  pdf: "https://report.ipcc.ch/ar6wg2/pdf/IPCC_AR6_WGII_CrossChapterPaper5.pdf"
+  pdf: "https://www.ipcc.ch/report/ar6/wg2/downloads/report/IPCC_AR6_WGII_CCP5.pdf"
   openaccess: Y
   pdf_text: Download chapter pdf
   pdf_external: Y
