--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -11,7 +11,7 @@
   notes:
     - text: "Featured as highlight paper"
       highlight: Y
-      # url: https://www.natural-hazards-and-earth-system-sciences.net/articles_and_preprints/highlight_articles.html
+      url: https://www.natural-hazards-and-earth-system-sciences.net/articles_and_preprints/highlight_articles.html
       external: Y
   new: Y
 
