--- a/_data/publications_datasets.yml
+++ b/_data/publications_datasets.yml
@@ -1,3 +1,11 @@
+- authors: Thornton J, Snethlage MA, Sayre R, Urbach DR, Viviroli D, Ehrlich D, Muccione V, Wester P, Insarov G, Adler C
+  year: 2022
+  title: "Supplementary Information: Human populations in the world's mountains: spatio-temporal patterns and potential controls"
+  repository: Zenodo Digital Repository
+  doi: 10.5281/zenodo.6673651
+  openaccess: Y
+  new: Y
+
 - authors: Kummu M, Heino M, Taka M, Varis O, Viviroli D
   year: 2021
   title: "Data from: Climate change risks to push one-third of global food production outside Safe Climatic Space"
