--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -151,7 +151,9 @@
   issue: 1
   pages: 363–377
   doi: 10.1029/2018WR023855
-  pdf: /documents/Pool_et_al_2019_WRR_55.pdf
+  pdf: https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2018WR023855
+  pdf_external: Y
+  openaccess: Y
 
 - authors: Brunner MI, Furrer R, Sikorska AE, Viviroli D, Seibert J, Favre AC
   year: 2018
