--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
 - title: About
   url: /about.html
 
-- title: Publications
-  url: /publications.html
+# - title: Publications
+#   url: /publications.html
   
-- title: Projects
-  url: /projects.html
+# - title: Projects
+#   url: /projects.html
