--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -1,18 +1,13 @@
-- authors: Viviroli D, Sikorska-Senoner AE, Evin G, Staudinger M, Kauzlaric M, Chardon J, Favre AC, Hingray B, Nicolet G, Raynaud D, Seibert J, Weingartner R, Whealton C
+- authors: Cicoira, A., Blatny, L., Li, X., Trottet, B., Gaume, J.
   year: 2022
-  title: Comprehensive space-time hydrometeorological simulations for estimating very rare floods at multiple sites in a large river basin
-  journal: Natural Hazards and Earth System Sciences
-  volume: 22
+  title: Towards a predictive multi-phase model for alpine mass movements and process cascades
+  journal: Engineering Geology
+  volume: 310
   pages: 2891–2920
-  doi: 10.5194/nhess-22-2891-2022
-  pdf: https://nhess.copernicus.org/articles/22/2891/2022/nhess-22-2891-2022.pdf
+  doi: https://doi.org/10.1016/j.enggeo.2022.106866
+  pdf: https://www.sciencedirect.com/science/article/pii/S0013795222003519
   pdf_external: Y
   openaccess: Y
-  notes:
-    - text: "Featured as highlight paper"
-      highlight: Y
-      url: https://www.natural-hazards-and-earth-system-sciences.net/articles_and_preprints/highlight_articles.html
-      external: Y
   new: Y
 
 
