--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -1,3 +1,14 @@
+- authors: Cicoira, A., Blatny, L., Li, X., Trottet, B., and Gaume, J.
+  year: 2022
+  title: Towards a predictive multi-phase model for alpine mass movements and process cascades
+  journal: Engineering Geology
+  volume: 310
+  pages: 2891–2920
+  doi: https://doi.org/10.1016/j.enggeo.2022.106866
+  pdf_external: Y
+  openaccess: Y
+  new: Y
+
 - authors: Cicoira, A., Blatny, L., Li, X., Trottet, B., Gaume, J.
   year: 2022
   title: Towards a predictive multi-phase model for alpine mass movements and process cascades
@@ -5,12 +16,20 @@
   volume: 310
   pages: 2891–2920
   doi: https://doi.org/10.1016/j.enggeo.2022.106866
-  pdf: https://www.sciencedirect.com/science/article/pii/S0013795222003519
   pdf_external: Y
   openaccess: Y
   new: Y
-
-
+  
+  - authors: Cicoira, A., Beutel, J., Faillettaz, J., Gärtner-Roer, I., and Vieli, A.
+  year: 2019
+  title: Resolving the influence of temperature forcing through heat conduction on rock glacier dynamics: a numerical modelling approach
+  journal: The Cryosphere
+  volume: 13
+  pages: 927-942
+  doi: https://doi.org/10.5194/tc-13-927-2019
+  pdf_external: Y
+  openaccess: Y
+  new: Y
 
 # - authors: Viviroli D, Sikorska-Senoner AE, Evin G, Staudinger M, Kauzlaric M, Chardon J, Favre AC, Hingray B, Nicolet G, Raynaud D, Seibert J, Weingartner R, Whealton C
 #   year: 2022
