--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -33,7 +33,7 @@
   
 - authors: Cicoira, A., Beutel, J., Faillettaz, J., Gärtner-Roer, I., and Vieli, A.
   year: 2019
-  title: Resolving the influence of temperature forcing through heat conduction on rock glacier dynamics: a numerical modelling approach
+  title: Resolving the influence of temperature forcing through heat conduction on rock glacier dynamics, a numerical modelling approach
   journal: The Cryosphere
   volume: 13
   pages: 927-942
