--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -19,6 +19,20 @@
   pdf_external: Y
   openaccess: Y
   new: Y
+  
+- authors: Marcer, M., Cicoira, A., Cusicanqui, D., Bodin, X., Echelard, T., Obregon, R., and Schoeneich, P. 
+  year: 2021
+  title: Rock glaciers throughout the French Alps accelerated and destabilised since 1990 as air temperatures increased
+  journal: Nature Communication Earth Environment
+  volume: 2
+  pages: 
+  doi: https://doi.org/10.1038/s43247-021-00150-6 
+  pdf_external: Y
+  openaccess: Y
+  new: Y  
+
+
+
 
 - authors: Cicoira, A., Beutel J., Faillettaz J., and Vieli, A.
   year: 2019
