--- a/_data/publication_preprints.yml
+++ b/_data/publication_preprints.yml
@@ -9,8 +9,7 @@
   openaccess: Y
   new: Y
   
-- authors: Cicoira, A., Weber, S., Biri, A., Buchli, B., Delaloye, R., Da Forno, R., Gaertner-Roer, I., Gruber, S., Gsell, T., Hasler, A., Lim, R., Limpach, P., ...
-  Mayoraz, R., Meyer, M., Noetzli, J., Phillips, M., Pointner, E., Raetzo, H., Scapoza, C., Strozzi, T., Thiele, L., Vieli, A., Vonder Mühll, D., Wirz, V., and Beutel, J.  
+- authors: Cicoira, A., Weber, S., Biri, A., Buchli, B., Delaloye, R., Da Forno, R., Gaertner-Roer, I., Gruber, S., Gsell, T., Hasler, A., Lim, R., Limpach, P., Mayoraz, R., Meyer, M., Noetzli, J., Phillips, M., Pointner, E., Raetzo, H., Scapoza, C., Strozzi, T., Thiele, L., Vieli, A., Vonder Mühll, D., Wirz, V., and Beutel, J.  
   year: 2022
   title: Kinematic observations of the mountain cryosphere using in-situ GNSS instruments
   journal: Earth System Science Data
