--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -6,8 +6,8 @@
   funding:
   - sponsor: Adaptation Fund (AF)
 
-- title: MAMMOC: A Material Point Method for Alpine Mass Movements in a Climate Change Context
-  subtitle: Hydrometeorological scenarios across a wide range of scales and return periods for all of Switzerland
+- title: MAMMOC
+  subtitle: A Material Point Method for Alpine Mass Movements in a Climate Change Context
   where: EPFL
   collaboration:
   - partner: SLF
