--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -17,7 +17,7 @@
   - sponsor: Swiss National Science Foundation (SNSF)
   
 - title: PAMIR
-  subtitle: Rock Glacier Dynamics in the Swiss Alps
+  subtitle: From ice to microorganisms and humans: Toward an interdisciplinary understanding of climate change impacts on the Third Pole
   where: UZH
   collaboration:
   - partner: EPFL
