--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -16,8 +16,8 @@
   funding:
   - sponsor: Swiss National Science Foundation (SNSF)
   
-- title: PAMIR
-  subtitle: From ice to microorganisms and humans: Toward an interdisciplinary understanding of climate change impacts on the Third Pole
+- title: PAMIR From ice to microorganisms and humans
+  subtitle: Toward an interdisciplinary understanding of climate change impacts on the Third Pole
   where: UZH
   collaboration:
   - partner: EPFL
