--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -1,5 +1,6 @@
 - title: GLOFCA  
   subtitle: Reducing vulnerabilities of Central Asian countries from Glacier Lake Outburst Floods
+  description: In the GLOFCA project, we blablabla. Moreover, we blablablabla... Finally, we blablablabla.
   where: University of Zurich
   collaboration:
   - partner: UNESCO
