--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,14 @@
 
 - title: Publications
   url: /publications.html
+  submenu: 
+  - text: Peer-reviewed articles
+  - anchor: PP
+  - text: Pre-prints
+  - anchor: JP
+  - text: Book chapters:
+  - anchor: BC
+  
   
 - title: Projects
   url: /projects.html
