--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,6 @@
   url: /projects.html
   submenu:
   - text: Current projects
-  anchor: CurP
+  anchor: curr
   - text: Completed projects
-  ancor: ComP
+  ancor: compl
