--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,12 +4,10 @@
 - title: Publications
   url: /publications.html
   submenu: 
-  - text: Peer-reviewed articles
+  - text: Peer-reviewed
     anchor: PP
   - text: Pre-prints
     anchor: JP
-  - text: Book chapters
-    anchor: BC
   
   
 - title: Projects
