--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@
 - title: Teaching
   url: /teaching.html
   submenu:
-  - text: Courses:
+  - text: Courses
     anchor: teacc
   - text: Master Thesis
     anchor: teacm
