--- a/_config.yml
+++ b/_config.yml
@@ -17,5 +17,8 @@ image_snow_ice_thumbs_loc: "/images/copyrighted/snow_ice/thumbs"
 image_European_Alps_fulls_loc: "/images/copyrighted/European_Alps/fulls"
 image_European_Alps_thumbs_loc: "/images/copyrighted/European_Alps/thumbs"
 
+image_Greenland_fulls_loc: "/images/copyrighted/Greenland/fulls"
+image_Greenland_thumbs_loc: "/images/copyrighted/Greenland/thumbs"
+
 image_CA_fulls_loc: "/images/copyrighted/CA/fulls"
 image_CA_thumbs_loc: "/images/copyrighted/CA/thumbs"
