--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,6 @@ image_Greenland_thumbs_loc: "/images/copyrighted/Greenland/thumbs"
 
 image_CA_fulls_loc: "/images/copyrighted/CA/fulls"
 image_CA_thumbs_loc: "/images/copyrighted/CA/thumbs"
+
+image_Alpinism_fulls_loc: "/images/copyrighted/Alpinism/fulls"
+image_Alpinism_thumbs_loc: "/images/copyrighted/Alpinism/thumbs"
