push and commit

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,6 +35,8 @@
     anchor: fieldGreen
   - text: Central Asia
     anchor: fieldCA
+  - text: Alpinism
+    anchor: fieldSport  
 
 - title: About
   url: /about.html
