push and commit

--- a/_data/teaching_masters.yml
+++ b/_data/teaching_masters.yml
@@ -3,6 +3,6 @@
   where: University of Fribourg
   
   
-- title: Glacier Lake Outburst Floods. Processes and related uncertainties.
-  subtitle: Student - Claudius Bruenniger. 
+- title: Glacier Lake Outburst Floods. Processes and related uncertainties
+  subtitle: Student - Claudius Bruenniger
   where: University of Zurich
