--- a/_data/teaching_courses.yml
+++ b/_data/teaching_courses.yml
@@ -1,8 +1,19 @@
-- title: Fieldcourse in glaciology 
-  subtitle: Seminars and Fieldcourse on field studies in glacial environments. 
-  where: University of Zurich
+- title: Numerical simulations of GLOF dynamics 
+  subtitle: International summer school with authorities and practitioners from Central Asia Republics. 
+  where: Almaty (Kazakhstan)
   
+- title: Seminar in Geomorphology 
+  subtitle: Seminar series on high alpine geomorphology. 
+  where: University of Fribourg
+  
+- title: Fieldcourse in glaciology 
+  subtitle: Seminars and Fieldcourse on field studies in glacial environments for Master students. 
+  where: University of Zurich
   
 - title: Glaciers and Permafrost
   subtitle: Lectures about rock glacier dynamics. 
+  where: University of Zurich
+
+- title: Small Group Teaching 
+  subtitle: Seminar series on geographical topics for Bachelor students. 
   where: University of Zurich
