push and commit

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@
     anchor: PR
   - text: Pre-prints
     anchor: PP
+  - text: Book chapters
+    anchor: PB
   
 - title: Projects
   url: /projects.html
