push and commit

--- a/_data/publications_books.yml
+++ b/_data/publications_books.yml
@@ -1,6 +1,6 @@
 - authors: Jacquemart, M., Cicoira, A.
   year: 2021
-  title: Hazardous Glacier Instabilities\: Ice Avalanches, Sudden Large-Volume Detachments of Low-Angle Mountain Glaciers, and Glacier Surges
+  title: Hazardous Glacier Instabilities":" Ice Avalanches, Sudden Large-Volume Detachments of Low-Angle Mountain Glaciers, and Glacier Surges
   journal: Treatise on Geomorphology (Second Edition)
   volume: 4
   pages: 330-345
