commit and push

--- a/_data/teaching_masters.yml
+++ b/_data/teaching_masters.yml
@@ -1,8 +1,8 @@
 - title: Explorative investigation of interannual and seasonal kinematic pattern of landslides in the Valais Alps, Switzerland
-  subtitle: Student - Maria Winterberger 
+#  subtitle: Student - Maria Winterberger 
   where: University of Fribourg
   
   
 - title: Glacier Lake Outburst Floods. Processes and related uncertainties
-  subtitle: Student - Claudius Bruenniger
+#  subtitle: Student - Claudius Bruenniger
   where: University of Zurich
