commit and push

--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -16,4 +16,11 @@
   funding:
   - sponsor: Swiss National Science Foundation (SNSF)
   
-  
+  - title: RockDynDisko
+  subtitle: Rock Glacier Dynamics on Disko Island
+  where: UZH
+  collaboration:
+  - partner: Gamma Remote Sensing
+  - partner: ETHZ
+  funding:
+  - sponsor: Swiss Polar Institute (SPI)
