commit and push

--- a/_data/teaching_courses.yml
+++ b/_data/teaching_courses.yml
@@ -1,6 +1,8 @@
 - title: Numerical simulations of GLOF dynamics 
   subtitle: International summer school with authorities and practitioners from Central Asia Republics. 
-  where: Almaty (Kazakhstan)
+  role: Organizer and main lecturer.
+  scope: Learn about required data, modelling, and post-processing of dynamic simulations. 
+  where: Almaty (Kazakhstan), July 2022
   
 - title: Seminar in Geomorphology 
   subtitle: Seminar series on high alpine geomorphology. 
