commit and push

--- a/_data/teaching_courses.yml
+++ b/_data/teaching_courses.yml
@@ -24,10 +24,10 @@
   role: Lecturer
   scope: Lecture about novel rock glacier and mass movements literature to Bachelor students 
   where: University of Zurich
-  year: 2018 
+  year: Fall 2018 
 
 - title: Small Group Teaching 
   subtitle: Seminar series on geographical topics for Bachelor students. 
   role: Organizer and tutor for the seminar series
   where: University of Zurich
-  year: 2018
+  year: Spring 2018
