commit and push

--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -1,5 +1,6 @@
 - title: GLOFCA  
   subtitle: Reducing vulnerabilities of Central Asian countries from Glacier Lake Outburst Floods
+  years: since 2021
   where: University of Zurich
   collaboration:
   - partner: UNESCO
@@ -8,6 +9,7 @@
 
 - title: Rockglacier Dynamics in the Swiss Alps (RoDynAlps)
   subtitle: investigating the long-term evolution of rock glacier dynamics in the Swiss Alps
+  years: since 2022
   role: Partner, writing the proposal (WP4), supervision of a PostDoc and co-supervision of a PhD student
   where: UZH
   collaboration:
@@ -20,6 +22,7 @@
 - title: From ice to microorganisms and humans - Toward an interdisciplinary understanding of 
 climate change impacts on the Third Pole (PAMIR)
   subtitle: finance logistics for interdisciplinary studies in the Pamir range
+  years: since 2022
   role: partner, support in writing the proposal, data management, and implementation of the project
   where: UZH
   collaboration:
@@ -32,6 +35,7 @@ climate change impacts on the Third Pole (PAMIR)
 
 - title: A Material Point Method for Permafrost Rock Walls Instabilities (MPM:rockwall)
   subtitle: investigating slope instabilities in permafrost by means of field and numerical experiments
+  years: since 2022
   where: UZH
   collaboration:
   - partner: EPFL
