commit and push

--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -7,7 +7,7 @@
   doi: https://doi.org/10.5194/essd-2021-176
   pdf_external: Y
   openaccess: Y
-  new: Y 
+  new: N 
 
 - authors: Cicoira, A., Blatny, L., Li, X., Trottet, B., and Gaume, J.
   year: 2022
@@ -18,7 +18,7 @@
   doi: https://doi.org/10.1016/j.enggeo.2022.106866
   pdf_external: Y
   openaccess: Y
-  new: Y
+  new: N
 
 - authors: Cicoira, A., Marcer, M., Gärtner-Roer, I., Bodin, X., Arenson, L.U., and Vieli, A.
   year: 2021
