commit and push

--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -19,8 +19,7 @@
   funding:
   - sponsor: research grant from the Swiss National Science Foundation (SNSF)
   
-- title: From ice to microorganisms and humans - Toward an interdisciplinary understanding of 
-climate change impacts on the Third Pole (PAMIR)
+- title: From ice to microorganisms and humans - Toward an interdisciplinary understanding of climate change impacts on the Third Pole (PAMIR)
   subtitle: finance logistics for interdisciplinary studies in the Pamir range
   years: since 2022
   role: partner, support in writing the proposal, data management, and implementation of the project
