commit and push

--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -11,11 +11,11 @@
   subtitle: investigating the long-term evolution of rock glacier dynamics in the Swiss Alps
   years: since 2022
   role: Partner, writing the proposal (WP4), supervision of a PostDoc and co-supervision of a PhD student
-  where: UZH
+  where: University of Zurich
   collaboration:
-  - partner: UniFr
-  - partner: UniL
-  - partner: SLF  
+  - partner: University of Fribourg
+  - partner: University of Lausanne
+  - partner: Snow and Avalanche Research Centre SLF  
   funding:
   - sponsor: research grant from the Swiss National Science Foundation (SNSF)
   
@@ -23,12 +23,12 @@
   subtitle: finance logistics for interdisciplinary studies in the Pamir range
   years: since 2022
   role: partner, support in writing the proposal, data management, and implementation of the project
-  where: UZH
+  where: University of Zurich
   collaboration:
-  - partner: EPFL
-  - partner: WSL
-  - partner: ETHZ  
-  - partner: UniFr
+  - partner: Ecole polytechnique fédérale de Lausanne
+  - partner: Swiss Federal Research Institute WSL
+  - partner: Eidgenössische Technische Hochschule Zürich  
+  - partner: University of Fribourg
   funding:
   - sponsor: flagship initiative of the Swiss Polar Institute (SPI)
 
@@ -37,10 +37,10 @@
   years: since 2022
   where: UZH
   collaboration:
-  - partner: EPFL
-  - partner: SLF
-  - partner: ETHZ  
-  - partner: UniL
+  - partner: Ecole polytechnique fédérale de Lausanne
+  - partner: Snow and Avalanche Research Centre SLF
+  - partner: Eidgenössische Technische Hochschule Zürich  
+  - partner: University of Lausanne
   funding:
   - sponsor: Climact Cluster Grant from EPFL and UniL
   
